Fix colour contrast for accessibility
- Changes the link hover text to be lighter so that the minimum contrast ratio of 4.5:1 is achieved

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -88,7 +88,7 @@ html, body {
 }
 
 .nav-link:hover, .nav-link:focus {
-    color: #6f42c1 !important;
+    color: #8F6DD0 !important;
 }
 
 .navbar-brand:hover {
@@ -152,7 +152,7 @@ html, body {
 }
 
 .selectedNav {
-    color:#6f42c1 !important;
+    color:#8F6DD0 !important;
 }
 
 .userImage {
